# acrf

./: .gitignore  ACRF_Whitepaper_v2 (1).md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  methodology-change.yml
.github/workflows/: ci.yml  release.yml
acrf/: __init__.py
acrf/assessments/: README.md  __init__.py  implicit-trust.yaml  multi-turn-defense-collapse.yaml  safety-controls-not-self-protecting.yaml  supply-chain-toxicity.yaml
acrf/cli/: main.py
acrf/core/: assessment.py  loader.py  models.py  report.py
docs/: ACRF Whitepaper.md  adoption-guide.md  governance.md  methodology.md  related-work.md
examples/: minimal-two-agent.yaml  prior-auth-agents.yaml  sample-assessment-report.md  trading-research-agents.yaml  travel-booking-agents.yaml
examples/acrf-01-implicit-trust/: README.md  WALKTHROUGH.md  docker-compose.yml  run-attack.sh  run-defense.sh
examples/acrf-01-implicit-trust/protected/: Dockerfile  attacker.py  booking.py  keygen.py  orchestrator.py
examples/acrf-01-implicit-trust/vulnerable/: Dockerfile  attacker.py  booking.py  orchestrator.py
examples/acrf-02-no-standard-identity/: docker-compose.yml  run-attack.sh  run-defense.sh
examples/acrf-02-no-standard-identity/protected/: Dockerfile  agent_registry.py  api_gateway.py  attacker.py
examples/acrf-02-no-standard-identity/vulnerable/: agent_registry.py  api_gateway.py  attacker.py
examples/acrf-03-mcp-server-sprawl/: README.md  docker-compose.yml  run-attack.sh  run-defense.sh
examples/acrf-03-mcp-server-sprawl/protected/: Dockerfile  agent.py  inventory.py  inventory.yaml
examples/acrf-03-mcp-server-sprawl/vulnerable/: Dockerfile  agent.py  email-server.py  shadow-server.py
examples/acrf-04-memory-poisoning/: README.md
examples/acrf-06-config-execution-vectors/: README.md  docker-compose.yml  run-attack.sh  run-defense.sh
examples/acrf-06-config-execution-vectors/protected/: Dockerfile  agent.py  attacker.py  config_guard.py  mcp_config.json
examples/acrf-06-config-execution-vectors/vulnerable/: Dockerfile  agent.py  attacker.py  mcp_config.json  ticket_server.py
examples/acrf-07-multi-turn-defense-collapse/: README.md  docker-compose.yml  run-attack.sh  run-defense.sh
examples/acrf-07-multi-turn-defense-collapse/protected/: Dockerfile  agent.py  attacker.py  guardian.py
examples/acrf-07-multi-turn-defense-collapse/vulnerable/: Dockerfile  agent.py  attacker.py
examples/acrf-08-cascading-failure/: README.md
examples/acrf-09-semantic-bypass/: docker-compose.yml  run-attack.sh  run-defense.sh
examples/acrf-09-semantic-bypass/protected/: Dockerfile  attacker.py  firewall.py  semantic_guardian.py
examples/acrf-09-semantic-bypass/vulnerable/: Dockerfile  attacker.py  firewall.py
specs/: system-description.schema.json
tests/: test_assessment.py  test_cli.py  test_loader.py  test_report.py  test_schema.py
tools/acrf-config-guard/: README.md
tools/acrf-identity/: README.md  pyproject.toml
tools/acrf-identity/acrf_identity/: __init__.py  card.py  cli.py  envelope.py  exceptions.py  trust_store.py
tools/acrf-identity/tests/: test_card.py  test_cli.py  test_envelope.py  test_trust_store.py
tools/acrf-mcp-scan/: README.md  pyproject.toml
tools/acrf-mcp-scan/acrf_mcp_scan/: __init__.py  cli.py  exceptions.py  inventory.py  scanner.py
tools/acrf-mcp-scan/tests/: test_cli.py  test_inventory.py  test_scanner.py
tools/acrf-memory-guard/: README.md  pyproject.toml
tools/acrf-memory-guard/acrf_memory_guard/: __init__.py  cli.py  core.py
tools/acrf-memory-guard/tests/: test_cli.py  test_core.py
tools/acrf-safety-shield/: README.md  pyproject.toml
tools/acrf-safety-shield/acrf_safety_shield/: __init__.py  cli.py  credentials.py  exceptions.py  shield.py
tools/acrf-safety-shield/tests/: test_cli.py  test_credentials.py  test_shield.py
tools/acrf-semantic-guard/: README.md  pyproject.toml
tools/acrf-semantic-guard/acrf_semantic_guard/: __init__.py  cli.py  detector.py  exceptions.py
tools/acrf-semantic-guard/tests/: test_cli.py  test_detector.py
tools/acrf-skill-verify/: README.md  pyproject.toml
tools/acrf-skill-verify/acrf_skill_verify/: __init__.py  cli.py  core.py
tools/acrf-skill-verify/tests/: test_cli.py  test_core.py
tools/acrf-tokens/: LICENSE  README.md  pyproject.toml
tools/acrf-tokens/acrf_tokens/: __init__.py  cli.py  exceptions.py  issuer.py  token.py  validator.py
tools/acrf-tokens/tests/: test_cli.py  test_issuer.py  test_token.py  test_validator.py
tools/acrf-trace/: README.md  pyproject.toml
tools/acrf-trace/acrf_trace/: __init__.py  cli.py  decorator.py  store.py
tools/acrf-turn-guardian/: README.md  pyproject.toml
tools/acrf-turn-guardian/acrf_turn_guardian/: __init__.py  cli.py  conversation.py  exceptions.py  session_manager.py
tools/acrf-turn-guardian/tests/: test_cli.py  test_conversation.py  test_session_manager.py
