[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acrf-memory-guard"
version = "0.1.0"
description = "Memory integrity verification for AI agents. Implements ACRF-04 defense pattern."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Ravi Karthick Sankara Narayanan" },
    { name = "Kanna Sekar" }
]
keywords = ["ai-security", "agent-security", "memory-integrity", "acrf", "hmac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kannasekar-alt/ACRF"
Repository = "https://github.com/kannasekar-alt/ACRF"
Issues = "https://github.com/kannasekar-alt/ACRF/issues"

[project.scripts]
acrf-memory-guard = "acrf_memory_guard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acrf_memory_guard*"]
